--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -1,4 +1,12 @@
 // Text Colors
 $lightGray: hsl(243, 10%, 61%);
-$medGray: hsl(0, 0%, 35%);
 $white: hsl(0, 0% ,100%);
+
+// Backgrounds
+$purpleOverlay: hsla(261, 51%, 51%, .5);
+$deepBlue: hsl(210, 64%, 9%);
+$medGray: hsl(210, 2%, 40%);
+$darkGrayBlue: hsl(210, 7%, 18%);
+
+// Accents
+$pinkAccent: hsl(304, 73%, 40%);
