--- a/scss/abstracts/_mixins.scss
+++ b/scss/abstracts/_mixins.scss
@@ -8,7 +8,18 @@
   justify-content: center;
 }
 
+@mixin flexBetween {
+  @extend %flex;
+  justify-content: space-between;
+}
+
 @mixin flexEnd {
   @extend %flex;
   justify-content: flex-end;
+}
+
+@mixin mq($size) {
+  @media only screen and (min-width: $size) {
+    @content;
+  }
 }
