--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -1,3 +1,6 @@
+@use '../abstracts/variables' as v;
+@use '../abstracts/mixins' as mx;
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -11,6 +14,7 @@ html, ::before, ::after {
 body {
   font-size: 1.8rem;
   font-family: 'Roboto', sans-serif;
+  background-color: v.$purpleOverlay;
 }
 
 a {
@@ -20,4 +24,11 @@ a {
 
 ul {
   list-style-type: none;
+}
+
+i {
+  @include mx.flexCenter;
+  // display: flex;
+  // align-items: center;
+  // justify-content: center;
 }
