--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -2,18 +2,60 @@
 @use '../abstracts/variables' as v;
 
 .header {
+  height: 100vh;
+  font-weight: 700;
+
   &-social-links {
-    @include mx.flexEnd;
+    @include mx.flexCenter;
+    justify-content: space-between;
     font-weight: 500;
-    color: v.$medGray;
-    padding: 1rem;
+    color: v.$lightGray;
+    padding-block: 1rem;
     
     .social-link-item {
-      margin-inline: 2rem;
       font-size: 2.7rem;
-      // color: v.$white;
-      padding-block-end: .5rem;
+      color: v.$white;
+      margin-block: 1rem;
+      margin-inline: 2rem;
+      &:last-child {
+        margin-inline-end: 0;
+      }
+    }
+  }
+
+  .navbar {
+    @include mx.flexBetween;
+    padding: 2.5rem;
+    background-color: v.$deepBlue;
+    
+    &-logo {
+      text-transform: uppercase;
+      color: v.$white;
+    }
+
+    &-links {
+      display: none;
+      // TODO: show on tablet? & above
     }
     
+    &-login {
+      color: v.$white;
+    }
+  }
+
+  &-dropdown-nav {
+    background-color: v.$medGray;
+    padding: 1.5rem;
+    @include mx.flexEnd;
+
+    .open-menu-link {
+      @include mx.flexCenter;
+      gap: 1rem;
+      background-color: v.$darkGrayBlue;
+      text-transform: uppercase;
+      color: v.$white;
+      padding: .7rem 1.3rem;
+      border-radius: .5rem;
+    }
   }
 }
