--- a/scss/abstracts/_mixins.scss
+++ b/scss/abstracts/_mixins.scss
@@ -18,6 +18,11 @@
   justify-content: flex-end;
 }
 
+@mixin flexColumn {
+  @extend %flex;
+  flex-direction: column;
+}
+
 @mixin mq($size) {
   @media only screen and (min-width: $size) {
     @content;
