--- a/scss/base/_utilities.scss
+++ b/scss/base/_utilities.scss
@@ -1,11 +1,15 @@
 @use '../abstracts/variables' as v;
 
 .container {
-  width: 95%;
+  width: 90%;
   height: 100%;
   margin-inline: auto;
 }
 
 .accent {
   color: v.$pinkAccent;
+}
+
+.uppercase {
+  text-transform: uppercase;
 }
