--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -17,6 +17,12 @@ body {
   background-color: v.$purpleOverlay;
 }
 
+p {
+  color: v.$lightGray;
+  font-weight: 400;
+  line-height: 1.5;
+}
+
 a {
   text-decoration: none;
   color: inherit;;
