--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -12,3 +12,21 @@
   border-radius: .5rem;
   cursor: pointer;
 }
+
+// Hero (read more)
+.main-rect-btn {
+  @include mx.flexCenter;
+  width: 22rem;
+  background-color: v.$white;
+  font-size: 1.45rem;
+  font-style: italic;
+  font-weight: 500;
+  letter-spacing: 1.1px;
+  padding-block: 2.1rem;
+  margin-block-start: 7rem;
+  margin-inline: auto;
+
+  i {
+    padding-inline-start: 1rem;
+  }
+}
