--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -10,6 +10,7 @@ $darkGrayBlue: hsl(210, 7%, 18%);
 
 // Accents
 $pinkAccent: hsl(304, 73%, 40%);
+$pAccBoxShadow: 0 0 2rem $pinkAccent;
 
 // Transitions
 $mobileMenu: all 0.25s ease;
