--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -15,6 +15,7 @@
 
 // Hero (read more)
 .main-rect-btn {
+  position: relative;
   @include mx.flexCenter;
   width: 22rem;
   background-color: v.$white;
@@ -25,8 +26,24 @@
   padding-block: 2.1rem;
   margin-block-start: 7rem;
   margin-inline: auto;
+  border: 2px solid v.$pinkAccent;
+  box-shadow: 0 0 1rem v.$pinkAccent;
 
-  i {
-    padding-inline-start: 1rem;
+  i:last-child {
+    position: absolute;
+    opacity: .4;
+    right: 4.2rem;
+  }
+
+  &::after {
+    content: '';
+    position: absolute;
+    top: 1.5rem;
+    left: 1.5rem;
+    width: 100%;
+    height: 100%;
+    background-color: v.$pinkAccent;
+    box-shadow: v.$pAccBoxShadow;
+    z-index: -1;
   }
 }
