--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -75,8 +75,11 @@
     @include mx.flexColumn;
     justify-content: center;
     text-align: center;
-  
+    height: 800px;
+
     &-info {
+      position: absolute;
+      top: 20rem;
       margin-block: 21rem 2rem;
   
       .title {
