--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,5 +2,6 @@
 @use './base/utilities';
 @use './components/buttons';
 @use './layout/header';
+@use './layout/navbar';
 
 @use './layout/responsive';
