--- a/scss/base/_utilities.scss
+++ b/scss/base/_utilities.scss
@@ -13,3 +13,8 @@
 .uppercase {
   text-transform: uppercase;
 }
+
+.active-btn {
+  color: v.$pinkAccent !important;
+  border: 2px solid v.$pinkAccent !important;
+}
