--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -2,6 +2,8 @@
 @use '../abstracts/variables' as v;
 
 .header {
+  position: relative;
+  height: 100vh;
   font-weight: 700;
 
   &-social-links {
@@ -25,7 +27,7 @@
   // NAVBAR
   .navbar {
     @include mx.flexBetween;
-    padding: 2.5rem;
+    padding: 2rem 2.5rem;
     background-color: v.$deepBlue;
     
     &-logo {
@@ -75,7 +77,6 @@
     @include mx.flexColumn;
     justify-content: center;
     text-align: center;
-    height: 800px;
 
     &-info {
       position: absolute;
