header btns & bg

--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -4,6 +4,7 @@ $white: hsl(0, 0% ,100%);
 
 // Backgrounds
 $purpleOverlay: hsla(261, 51%, 51%, .5);
+$purpleGradiantOverlay: linear-gradient(320deg, hsl(276, 91%, 38%), hsl(295, 45%, 38%), hsl(304, 73%, 40%));
 $deepBlue: hsl(210, 64%, 9%);
 $medGray: hsl(210, 2%, 40%);
 $darkGrayBlue: hsl(210, 7%, 18%);
