--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -55,6 +55,7 @@
   
   .circle-btns-container {
     padding: 2rem;
+    padding-inline-start: 0;
 
     .circle-btn {
       height: 5rem;
@@ -66,7 +67,16 @@
     }
   }
 
-  // .next {
+}
 
-  // }
+.next > i {
+  position: absolute;
+  right: 3vmin;
+  bottom: 3vmin;
+  color: v.$white;
+}
+
+.next i:first-child {
+  transform: translateX(-10px);
+  color: v.$pinkAccent;
 }
