--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -5,6 +5,26 @@
   position: relative;
   height: 100vh;
   font-weight: 700;
+  &::before, &::after {
+    content: '';
+    position: absolute;
+    inset: 0;
+    width: 100%;
+    height: 100%;
+  }
+  &::before {
+    background: 
+      url('../images/bkg-2.jpg')
+      center center
+      / cover
+      no-repeat;
+    z-index: -2;
+  }
+  &::after {
+    background-image: v.$purpleGradiantOverlay;
+    opacity: .4;
+    z-index: -1;
+  }
 
   &-social-links {
     @include mx.flexCenter;
@@ -81,6 +101,7 @@
     &-info {
       position: absolute;
       top: 20rem;
+      max-width: 800px;
       margin-block: 21rem 2rem;
   
       .title {
