--- a/scss/layout/_navbar.scss
+++ b/scss/layout/_navbar.scss
@@ -2,13 +2,14 @@
 @use '../abstracts/variables' as v;
 
 .header {
-    .navbar {
-      @include mx.flexBetween;
+  .navbar {
+    @include mx.flexBetween;
     padding: 2rem 2.5rem;
     background-color: v.$deepBlue;
     
     &-logo {
       text-transform: uppercase;
+      font-style: italic;
       color: v.$white;
     }
     
