--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -49,6 +49,8 @@
     @include mx.flexBetween;
     padding: 2rem 2.5rem;
     background-color: v.$deepBlue;
+    position: relative;
+    z-index: 4;
     
     &-logo {
       text-transform: uppercase;
@@ -69,6 +71,8 @@
     background-color: v.$medGray;
     padding: 1.5rem;
     padding-inline-start: 2.5rem;
+    position: relative;
+    z-index: 4;
 
     &-container {
       align-self: flex-start;
@@ -91,14 +95,29 @@
 
     &-info {
       position: absolute;
-      top: 20rem;
+      top: 15rem;
       max-width: 800px;
       margin-block: 21rem 2rem;
-  
+      opacity: 0;
+      transition: all 0.4s ease-in-out;
+      overflow: hidden;
+      
       .title {
         font-size: 6.5rem;
         color: mx.titleTextColor(v.$purpleOverlay);
         margin-block-end: 2rem;
+      }
+
+      // Carousel/Slide Effect
+      &.active {
+        opacity: 1;
+        transform: translateY(0);
+      }
+      &.next {
+        transform: translateY(100%)
+      }
+      &.last {
+        transform: translateY(-100%);
       }
     }
   }
